# gwtegaki

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.09e1b903.css  index.09e1b903.css.map  index.c1ee236b.js  index.c1ee236b.js.map  index.html  package-lock.json  package.json  src.50fa412c.js  src.50fa412c.js.map  src.d5843155.js  src.d5843155.js.map  style.4c138352.css  style.4c138352.css.map  style.c4114560.css  style.c4114560.css.map
.github/workflows/: frontend.yml
backend/: .gcloudignore  .gitignore  Dockerfile  dataset.go  dataset.js  dataset.py  function.go  gcs.py  go.mod  go.sum  hwrSearch.js  index.js  main.go  main.py  package-lock.json  package.json  requirements.txt  search.go  search.py  server.js  types.d.ts  web.py
backend/localtest/: main.go
backend/src/: hwrSearch.js  server.js
backend/src/dataset/: index.js
build_index/: .gitignore  Cargo.toml  Makefile  build_feature.js  package-lock.json  package.json
build_index/src/: dump_reader.rs  glyph_name.rs  kage.rs  main.rs
frontend/: .env  .env.development  .env.production  .gitignore  Makefile  app.js  astro.config.mjs  build_animation.js  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: api.js  api.ts  env.d.ts  index.html  index.js  store.js  store.ts  style.css  vite-env.d.ts
frontend/src/components/: App.jsx  App.tsx  (+12 more)
model/: .gitignore  Cargo.toml  Makefile  build_feature.js  feature.d.ts  feature.js  package-lock.json  package.json
model/src/: indexed_feature.rs  lib.rs  model.rs  stroke.rs
(+3 files in other folders)
