[package]
name = "gwtegaki-build_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gwtegaki-model = { path = "../model" }
indicatif = "0.17.8"
itertools = "0.14.0"
once_cell = "1.19.0"
regex = "1.10.3"
