[package]
name = "gwtegaki-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
itertools = "0.12.1"
wasm-bindgen = "0.2.91"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
